--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,9 @@
     content: '';
     @apply absolute inset-0 -z-10 bg-cover bg-center bg-fixed bg-no-repeat;
     background-image: url('/hero.jpg');
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    transform: scale(1.1);
   }
 
   .bg-image-wrapper::after {
