--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 96%; /* Off-white */
+    --background: 33 86% 93%; /* #fdeedc */
     --foreground: 240 10% 3.9%; /* Near Black */
     --card: 0 0% 100%; /* White */
     --card-foreground: 240 10% 3.9%;
@@ -32,7 +32,7 @@
   }
 
   .dark {
-    --background: 0 0% 96%; /* Off-white */
+    --background: 33 86% 93%; /* #fdeedc */
     --foreground: 240 10% 3.9%; /* Near Black */
     --card: 0 0% 100%; /* White */
     --card-foreground: 240 10% 3.9%;
